# NEW-Goat-Receipts

./: .bot_start_time  .replit  DEPLOYMENT_GUIDE.md  GUMROAD_SETUP.md  GUMROAD_WEBHOOK_SETUP.md  config.json  data.db  data.db-shm  data.db-wal  extension_api.py  fix_all_images.py  fix_receipts.py  generate_file_upload_modals.py  main.py  pyproject.toml  replit.md  requirements.txt  run_production.py  setup_gumroad_webhook.py  synaworld_receipt_1339295766828552365.html  templates.py  update_webhook_url.py  verify_file_upload_commands.py  webhook_server.py  whitelist.txt
addons/: data.db  nextsteps.py  settings.py
attached_assets/: Pasted--div-id-lv-class-a3s-aiL-table-tbody-tr-td-align-center-bgcolor-eae8e3-style-text--1757517315746_1757517315746.txt  Pasted-2025-05-24-20-20-03-INFO-discord-client-logging-in-using-static-token-Traceback-most-recent-ca-1748118012244.txt  Pasted-2025-06-05-15-01-40-ERROR-discord-app-commands-tree-Ignoring-exception-in-command-edit-Traceba-1749135714603.txt  Pasted-2025-06-05-15-03-51-ERROR-discord-app-commands-tree-Ignoring-exception-in-command-edit-Traceba-1749135840278.txt  Pasted-6pm-1428098349088903248-acnestudios-1428098349088903250-adidas-1428098349088903251-adwys-1760592684221_1760592684221.txt  Pasted-6pm-1428098349088903248-acnestudios-1428098349088903250-adidas-1428098349088903251-adwysd--1760560506005_1760560506005.txt  Pasted-The-error-You-can-t-use-this-selection-menu-occurs-because-the-owner-id-check-in-your-XerjoffStatu-1749060450619.txt  RegionalView.py  spoofed.py  (+4 more)
chrome-extension/: INSTALL.md  README.md  manifest.json  (+2 more)
(+228 files in other folders)
